--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@
                <h5>March is finally here</h5>
             </li>
              <li class="column">
-                <a title="February 2007"><img class=" thumbnail" src="./css/links/february2007.png"></a>
+                <a title="February 2007"><img class=" thumbnail" src="./css/links/february2007.jpg"></a>
                <h5>More fun</h5>
             </li>
               </div>
               <div class="row margin small-up-2 medium-up-4 large-up-6">
              <li class="column">
-                <a title="Janurary 2007"><img class="thumbnail" src="./css/links/janurary2007.jpg"></a>
+                <a title="Janurary 2007"><img class="thumbnail" src="./css/links/january2007.jpg"></a>
                 <h5>Cold weather</h5>
             </li>
              <li class="column">
-                <a title="Janurary 2007"><img class=" thumbnail" src="./css/links/Janurary20071.jpg"></a>
+                <a title="Janurary 2007"><img class=" thumbnail" src="./css/links/janurary20071.jpg"></a>
                 <h5>William turns 3</h5>
             </li>
             <li class="column">
